--- a/src/styles/loginStyle.css
+++ b/src/styles/loginStyle.css
@@ -56,7 +56,7 @@
     border-width: 0.125rem;
     border-style: solid;
     border-color: oklch(0.45 0.085 224.283);
-    background-color: ooklch(0.946 0.033 307.174);
+    background-color: color-mix(in oklch, var(--primary-dark) 5%, transparent);
 }
 
 .login-card .login-card-content .login-card-content-title {
@@ -77,27 +77,6 @@
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1;
-}
-
-.login-card .login-card-content .login-card-content-form .email input,
-.login-card .login-card-content .login-card-content-form .pass input {
-    width: 100%;
-    height: 2.75rem;
-    padding: 0.5rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    border-radius: 0.375rem;
-    border: 1px solid oklch(0.551 0.027 264.364);
-    background-color: oklch(0.985 0.002 247.839);
-    color: oklch(0.21 0.034 264.665);
-    outline: none;
-    transition: box-shadow 0.3s ease;
-}
-
-.login-card .login-card-content .login-card-content-form .pass input:focus-visible,
-.login-card .login-card-content .login-card-content-form .email input:focus-visible {
-    box-shadow: 0 0 0 2px oklch(0.45 0.085 224.283);
-    outline-offset: 1px;
 }
 
 .login-card .login-card-content .login-card-content-form .remember-me {
