--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,13 +74,15 @@
     --header-bg: oklch(0.929 0.013 255.508);
     --sidebar-bg: oklch(0.869 0.022 252.894);
     --sidebar-title-bg: oklch(0.869 0.022 252.894);
-    --card-bg: #ffffff;
+    --card-bg: #ffffff;    
     --border: oklch(0.704 0.04 256.788);
+    --border-focus: oklch(0.45 0.085 224.283);
 
     /* === Tipografía === */
-    --text-primary: oklch(0.21 0.034 264.665);
+    --text-primary: oklch(0.293 0.066 243.157);
     --text-secondary: oklch(0.928 0.006 264.531);
-    --text-muted: oklch(0.551 0.027 264.364);
+    --text-tertiary: oklch(0.554 0.046 257.417);
+    --text-muted: oklch(0.707 0.022 261.325);
     /* === Colores principales === */
     --primary: oklch(0.609 0.126 221.723);
     --primary-dark: oklch(0.45 0.085 224.283);
@@ -124,6 +126,20 @@
 
     --card-next-session-info-bg: oklch(0.968 0.007 247.896);
     --card-next-session-info-border: oklch(0.446 0.043 257.281);
+
+    /* === Card Exercise === */
+    --session-color: oklch(0.546 0.245 262.881);
+    --exercise-color: oklch(0.75 0.183 55.934);
+    --student-color: oklch(0.723 0.219 149.579);
+
+    /* === Accordion === */
+    --accordion-header-bg: oklch(0.929 0.013 255.508);
+    --accordion-bg: #ffffff;
+
+    /* === Switch === */
+    --switch-off-bg: oklch(0.707 0.022 261.325);
+    --switch-on-bg: oklch(0.609 0.126 221.723);
+    --switch-circle: oklch(0.928 0.006 264.531);
 }
 
 .dark {
@@ -134,6 +150,7 @@
     --sidebar-title-bg: oklch(0.208 0.042 265.755);
     --card-bg: oklch(0.446 0.043 257.281);
     --border: oklch(0.554 0.046 257.417);
+    --border-focus: oklch(0.291 0.149 302.717);
     /* === Tipografía === */
     --text-primary: oklch(0.985 0.002 247.839);
     --text-secondary: oklch(0.967 0.003 264.542);
@@ -151,7 +168,7 @@
     /* === Extras === */
     --shadow-color: rgba(255, 255, 255, 0.1);
     --input-bg: #0f172a;
-    --input-border: var(--color-gray-500);
+    --input-border: oklch(0.551 0.027 264.364);
     --hover-bg: #1e293b;
     --scrollbar-thumb: oklch(0.208 0.042 265.755);
     --scrollbar-track: oklch(0.446 0.03 256.802);
@@ -180,6 +197,20 @@
 
     --card-next-session-info-bg: oklch(0.554 0.046 257.417);
     --card-next-session-info-border: oklch(0.279 0.041 260.031);
+
+    /* === Card Exercise === */
+    --session-number: oklch(0.546 0.245 262.881);
+    --exercise-number: oklch(0.75 0.183 55.934);
+    --student-number: oklch(0.723 0.219 149.579);
+
+    /* === Accordion === */
+    --accordion-header-bg: oklch(0.446 0.043 257.281);
+    --accordion-bg: oklch(0.554 0.046 257.417);
+
+    /* === Switch === */
+    --switch-off-bg: oklch(0.707 0.022 261.325);
+    --switch-on-bg: oklch(0.438 0.218 303.724);
+    --switch-circle: oklch(0.928 0.006 264.531);
 }
 
 html,
@@ -201,6 +232,9 @@ body {
 
 /* button ------------------------------------- */
 .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 0.5rem;
     white-space: nowrap;
     border-radius: 0.375rem;
@@ -208,22 +242,210 @@ body {
     font-weight: 500;
     padding: 0.5rem 1rem;
     width: 100%;
-    height: 2.75rem;
+    height: 2.5rem;
     background-color: var(--primary);
     color: oklch(0.985 0.002 247.839);
-    box-shadow: 0 0 0 1px var(--shadow-color);
     transition: color 0.3s ease, background-color 0.3s ease;
     outline: none;
     cursor: pointer;
 }
 
-.button:hover {
+.button-small {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    white-space: nowrap;
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    padding: 0.5rem 0.75rem;
+    width: 100%;
+    height: 2.25rem;
+    background-color: var(--primary);
+    color: oklch(0.985 0.002 247.839);
+    transition: color 0.3s ease, background-color 0.3s ease;
+    outline: none;
+    cursor: pointer;
+}
+
+.button:hover,
+.button-small:hover {
     background-color: var(--primary-dark);
 }
 
+.button-small-icon-red {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    white-space: nowrap;
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    padding: 0.5rem 0.75rem;
+    width: 100%;
+    height: 2.25rem;
+    background-color: transparent;
+    color: var(--destructive);
+    transition: color 0.3s ease, background-color 0.3s ease;
+    outline: none;
+    cursor: pointer;
+}
 
+.button-small-icon-red:hover {
+    background-color: color-mix(in oklch, var(--destructive) 20%, transparent);
+}
 
-/* header */
+.button-small-cancel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    white-space: nowrap;
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    padding: 0.5rem 0.75rem;
+    width: 100%;
+    height: 2.25rem;
+    background-color: color-mix(in oklch, var(--destructive) 50%, transparent);
+    color: oklch(0.985 0.002 247.839);
+    transition: color 0.3s ease, background-color 0.3s ease;
+    outline: none;
+    cursor: pointer;
+}
+
+.button-small-cancel:hover {
+    background-color: color-mix(in oklch, var(--destructive) 30%, transparent);
+}
+
+/* input -------------------------------------- */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  background-color: transparent; /* elimina fondo gris */
+  appearance: none;               /* remueve estilo nativo */
+}
+
+.input {
+    height: 2.5rem;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    border-radius: 0.375rem;
+    border: 1px solid var(--border);
+    background-color: var(--input-bg);
+    color: var(--text-primary);
+    outline: none;
+    transition: box-shadow 0.3s ease;
+}
+
+input:focus-visible {
+    box-shadow: 0 0 0 2px oklch(0.45 0.085 224.283);
+    outline-offset: 1px;
+}
+
+.input-with-icon {
+    height: 2.5rem;
+    width: 100%;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 2.5rem;
+    padding-right: 0.5rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    border-radius: 0.375rem;
+    border: 1px solid var(--border);
+    background-color: var(--input-bg);
+    color: var(--text-primary);
+    outline: none;
+    transition: box-shadow 0.3s ease;
+}
+
+.input-with-icon:focus-visible {
+    box-shadow: 0 0 0 2px oklch(0.45 0.085 224.283);
+    outline-offset: 1px;
+}
+
+.input-icon {
+    font-size: 1.5rem;
+    position: absolute;
+    padding: 0.5rem;
+    font-weight: 400;
+    color: var(--text-muted);
+}
+
+/* textarea ----------------------------------- */
+.textarea {
+    width: 100%;
+    padding: 0.5rem 0.5rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    border-radius: 0.375rem;
+    border: 1px solid var(--border);
+    background-color: var(--input-bg);
+    color: var(--text-primary);
+    outline: none;
+    transition: box-shadow 0.3s ease;
+}
+
+textarea:focus-visible {
+    box-shadow: 0 0 0 2px oklch(0.45 0.085 224.283);
+    outline-offset: 1px;
+}
+
+/* accordion ---------------------------------- */
+.accordion {
+    margin: 0.5rem;
+    width: 100%;
+    overflow-y: auto;
+    max-height: 24rem;
+}
+
+.accordion>*+* {
+    margin-top: 0.5rem;
+}
+
+.accordion .border {
+    border-width: 0rem;
+    border-radius: 0.375rem;
+}
+
+.accordion-header {
+    border-radius: 0.375rem;
+    background-color: var(--accordion-header-bg);
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1.125rem;
+    outline: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.accordion-header-icon {
+    transition: transform 300ms ease;
+    transform: rotate(0deg);
+}
+
+.accordion-content {
+    padding-top: -1rem;
+    border-color: var(--border);
+    border-radius: 0.375rem;
+    background-color: var(--accordion-bg);
+    max-height: 0;
+    overflow: hidden;
+    padding: 0rem 1rem;
+    transition: all 0.5s ease-in-out, max-height 0.5s ease-in-out;
+}
+
+/* header ------------------------------------- */
 .header {
     background-color: var(--header-bg);
     height: 6rem;
@@ -262,7 +484,7 @@ body {
     transition: background-color 0.3s ease-in;
 }
 
-/* content */
+/* content ------------------------------------ */
 .content {
     height: calc(100vh - 6rem);
     overflow-y: auto;
