--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -71,9 +71,10 @@
 :root {
     /* === Colores base === */
     --background: oklch(0.984 0.003 247.858);
-    --header-bg: oklch(0.929 0.013 255.508);
-    --sidebar-bg: oklch(0.869 0.022 252.894);
-    --sidebar-title-bg: oklch(0.869 0.022 252.894);
+    --header-bg: oklch(0.869 0.022 252.894);
+    --sub-header-bg: oklch(0.929 0.013 255.508);
+    --sidebar-bg: oklch(0.704 0.04 256.788);
+    --sidebar-title-bg: oklch(0.704 0.04 256.788);
     --card-bg: #ffffff;
     --border: oklch(0.704 0.04 256.788);
     --border-focus: oklch(0.45 0.085 224.283);
@@ -82,7 +83,7 @@
     --text-primary: oklch(0.293 0.066 243.157);
     --text-secondary: oklch(0.928 0.006 264.531);
     --text-tertiary: oklch(0.554 0.046 257.417);
-    --text-muted: oklch(0.707 0.022 261.325);
+    --text-muted: oklch(0.704 0.04 256.788);
     /* === Colores principales === */
     --primary: oklch(0.609 0.126 221.723);
     --primary-dark: oklch(0.45 0.085 224.283);
@@ -141,6 +142,12 @@
     --switch-on-bg: oklch(0.609 0.126 221.723);
     --switch-circle: oklch(0.928 0.006 264.531);
 
+    /* === Plan === */
+    --objetive: oklch(0.606 0.25 292.717);
+    --session: oklch(0.705 0.213 47.604);
+    --excercise: oklch(0.696 0.17 162.48);
+
+
     /* === Statistics === */
     --weight: oklch(0.546 0.245 262.881);
     --progress: oklch(0.723 0.219 149.579);
@@ -153,6 +160,7 @@
     /* === Colores base === */
     --background: oklch(0.279 0.041 260.031);
     --header-bg: oklch(0.372 0.044 257.287);
+    --sub-header-bg: oklch(0.554 0.046 257.417);
     --sidebar-bg: oklch(0.208 0.042 265.755);
     --sidebar-title-bg: oklch(0.208 0.042 265.755);
     --card-bg: oklch(0.446 0.043 257.281);
@@ -311,6 +319,29 @@ body {
     background-color: color-mix(in oklch, var(--destructive) 20%, transparent);
 }
 
+.button-cancel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    white-space: nowrap;
+    border-radius: 0.375rem;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    width: 100%;
+    height: 2.5rem;
+    background-color: color-mix(in oklch, var(--destructive) 70%, transparent);
+    color: oklch(0.985 0.002 247.839);
+    transition: color 0.3s ease, background-color 0.3s ease;
+    outline: none;
+    cursor: pointer;
+}
+
+.button-cancel:hover {
+    background-color: color-mix(in oklch, var(--destructive) 40%, transparent);
+}
+
 .button-small-cancel {
     display: flex;
     align-items: center;
@@ -323,7 +354,7 @@ body {
     padding: 0.5rem 0.75rem;
     width: 100%;
     height: 2.25rem;
-    background-color: color-mix(in oklch, var(--destructive) 50%, transparent);
+    background-color: color-mix(in oklch, var(--destructive) 70%, transparent);
     color: oklch(0.985 0.002 247.839);
     transition: color 0.3s ease, background-color 0.3s ease;
     outline: none;
@@ -331,16 +362,14 @@ body {
 }
 
 .button-small-cancel:hover {
-    background-color: color-mix(in oklch, var(--destructive) 30%, transparent);
+    background-color: color-mix(in oklch, var(--destructive) 40%, transparent);
 }
 
 /* input -------------------------------------- */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     background-color: transparent;
-    /* elimina fondo gris */
     appearance: none;
-    /* remueve estilo nativo */
 }
 
 .input {
