--- a/src/styles/loginStyle.css
+++ b/src/styles/loginStyle.css
@@ -49,14 +49,14 @@
 /*card*/
 .login-card {
     width: 100%;
-    border-radius: 0.5rem;
-    color: oklch(0.13 0.028 261.692);
-    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
+    border-radius: 0.375rem;
+    color: var(--text-primary);
+    box-shadow: 0 0.125rem 0.25rem var(--shadow-color);
     max-width: 28rem;
     border-width: 0.125rem;
     border-style: solid;
-    border-color: oklch(0.45 0.085 224.283);
-    background-color: color-mix(in oklch, var(--primary-dark) 5%, transparent);
+    border-color: color-mix(in oklch, var(--border) 50%, transparent) ;
+    background-color: color-mix(in oklch, var(--card-bg) 50%, transparent);
 }
 
 .login-card .login-card-content .login-card-content-title {
@@ -79,22 +79,4 @@
     line-height: 1;
 }
 
-.login-card .login-card-content .login-card-content-form .remember-me {
-    font-size: 0.875rem;
-    gap: 0.5rem;
-    cursor: pointer;
-}
 
-.login-card .login-card-content .login-card-content-form .remember-me input[type="checkbox"] {
-    border-radius: 0.25rem;
-    accent-color: oklch(0.45 0.085 224.283);
-}
-
-.login-card .login-card-content .login-card-content-form a {
-    font-size: 0.875rem;
-    text-decoration: none;
-}
-
-.login-card .login-card-content .login-card-content-form a:hover {
-    text-decoration: underline;
-}
