--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -262,7 +262,7 @@ body {
     border-radius: 0.375rem;
     font-size: 1rem;
     font-weight: 500;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem 0.5rem 0.5rem;
     width: 100%;
     height: 2.5rem;
     background-color: var(--primary);
@@ -382,7 +382,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .input {
     height: 2.5rem;
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem 0.5rem 0.5rem;
     font-size: 0.875rem;
     font-weight: 400;
     border-radius: 0.375rem;
