--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -154,6 +154,12 @@
     --reps: oklch(0.75 0.183 55.934);
     --sets: oklch(0.627 0.265 303.9);
     --chart-bg: #ffffff;
+
+    /* === Card payment === */
+    --total-payments:oklch(0.546 0.245 262.881);
+    --credit-card: oklch(0.705 0.213 47.604);
+    --cash: oklch(0.723 0.219 149.579);
+    --transfer: oklch(0.558 0.288 302.321);
 }
 
 .dark {
@@ -233,6 +239,12 @@
     --reps: oklch(0.75 0.183 55.934);
     --sets: oklch(0.627 0.265 303.9);
     --chart-bg: #343A3F;
+
+    /* === Card payment === */
+    --total-payments:oklch(0.588 0.158 241.966);
+    --credit-card: oklch(0.592 0.249 0.584);
+    --cash: oklch(0.715 0.143 215.221);
+    --transfer: oklch(0.558 0.288 302.321);
 }
 
 html,
