Modificaciones en usuario y ejercicio, implementadas funcionalidades faltantes y mejorado el estilado. Solo falta la funcionalidad de eliminar usuario.

--- a/src/styles/modalExercise.css
+++ b/src/styles/modalExercise.css
@@ -149,3 +149,10 @@
   gap: 1rem;
   margin-top: 2rem;
 }
+
+#modal-exercise-delete.modal-exercise {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: auto;
+}
